--- a/src/components/header/style.css
+++ b/src/components/header/style.css
@@ -7,7 +7,7 @@ h1 {
     font-family: 'Bad Script', cursive;
     color: gray;
     padding-top: 60px;
-    padding-bottom: 70px;
+    padding-bottom: 30px;
 
     
 }
