--- a/src/components/pages/Open/style.css
+++ b/src/components/pages/Open/style.css
@@ -5,12 +5,14 @@
     padding-top: 100px;
     font-family: 'Bad Script';
     color: rgb(173, 110, 67);
-    font-size: 100px;
+    font-size: 80px;
+    padding-left: 60px;
+    padding-right: 60px;
 }
 
 .button {
     font-family: 'Josefin Sans';
     font-size: 50px;
     padding-top: 70px;
-    padding-bottom: 300px;
+    padding-bottom: 50px;
 }
