--- a/src/components/pages/Projects/style.css
+++ b/src/components/pages/Projects/style.css
@@ -4,7 +4,7 @@
 .allproject {
     font-family: 'Josefin Sans', cursive;
     color: rgb(63, 63, 63);
-    padding-bottom: 300px;
+    padding-bottom: 50px;
 }
 
 .cardheader {
