--- a/src/components/pages/Resume/style.css
+++ b/src/components/pages/Resume/style.css
@@ -2,5 +2,5 @@
 
     padding-left: 300px;
     padding-right: 300px;
-    padding-bottom: 300px;
+    padding-bottom: 50px;
 }
