--- a/src/components/pages/home/style.css
+++ b/src/components/pages/home/style.css
@@ -3,10 +3,10 @@
 
 .bio {
     text-align: center;
-    padding-top: 80px;
-    padding-left: 200px;
-    padding-right: 200px;
-    padding-bottom: 300px;
+    padding-top: 60px;
+    padding-left: 300px;
+    padding-right: 300px;
+    padding-bottom: 60px;
     font-size: 20px;
     font-family: 'Josefin Sans', cursive;
    
